--- a/excel-frontend/package.json
+++ b/excel-frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@types/node": "^20.11.16",
     "axios": "^1.6.7",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
